# onnx-dump

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-03-17-onnx-operator-dump.md  2026-03-26-basic-add-relu-example.md
docs/superpowers/specs/: 2026-03-16-onnx-operator-dump-design.md  2026-03-23-tensor-summary-design.md  2026-03-26-basic-add-relu-example-design.md  2026-04-03-op-graph-align-ref-output-design.md
examples/: run_example.py
examples/basic_add_relu/: generate.py
examples/basic_add_relu/input/: model.onnx
examples/basic_add_relu/output/: manifest.json
examples/basic_add_relu/output/tensors/: X.npy  Y.npy  add_out.npy
src/onnx_dump/: __init__.py  __main__.py  cli.py  exporter.py  graph.py  ref_graph.py  runner.py
tests/: conftest.py  test_cli.py  test_examples.py  test_exporter.py  test_graph.py  test_ref_graph.py  test_runner.py  test_system.py
