[project]
name = "onnx-dump"
version = "0.1.0"
description = "Dump per-operator intermediate tensors from ONNX models"
requires-python = ">=3.10"
dependencies = [
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "numpy>=1.24.0",
]

[project.scripts]
onnx-dump = "onnx_dump.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/onnx_dump"]

[tool.pytest.ini_options]
testpaths = ["tests"]
